// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SpeedGraderHeader doesnt show the student name when anonymous 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {},
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "marginLeft": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Student
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#07AF1F",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        Submitted
      </Text>
    </View>
    <View
      style={
        Object {
          "marginRight": 12,
        }
      }
    >
      <TouchableOpacity
        accessibilityComponentType="button"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onLongPress={undefined}
        onPress={[Function]}
        onPressIn={undefined}
        onPressOut={undefined}
        style={undefined}
        testID="header.navigation-done"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a grade-only submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {},
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "marginLeft": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Allura
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#8B969E",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        No submission
      </Text>
    </View>
    <View
      style={
        Object {
          "marginRight": 12,
        }
      }
    >
      <TouchableOpacity
        accessibilityComponentType="button"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onLongPress={undefined}
        onPress={[Function]}
        onPressIn={undefined}
        onPressOut={undefined}
        style={undefined}
        testID="header.navigation-done"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with a submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {},
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "marginLeft": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Allura
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#07AF1F",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        Submitted
      </Text>
    </View>
    <View
      style={
        Object {
          "marginRight": 12,
        }
      }
    >
      <TouchableOpacity
        accessibilityComponentType="button"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onLongPress={undefined}
        onPress={[Function]}
        onPressIn={undefined}
        onPressOut={undefined}
        style={undefined}
        testID="header.navigation-done"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with an over-due grade-only submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {},
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "marginLeft": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Allura
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#EE0612",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        Missing
      </Text>
    </View>
    <View
      style={
        Object {
          "marginRight": 12,
        }
      }
    >
      <TouchableOpacity
        accessibilityComponentType="button"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onLongPress={undefined}
        onPress={[Function]}
        onPressIn={undefined}
        onPressOut={undefined}
        style={undefined}
        testID="header.navigation-done"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;

exports[`SpeedGraderHeader renders with no submission 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "backgroundColor": "white",
      },
    ]
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "marginTop": 16,
      }
    }
  >
    <View
      style={
        Object {
          "height": 40,
          "marginLeft": 16,
          "width": 40,
        }
      }
    >
      <View
        accessibilityLabel=""
        style={
          Array [
            Object {
              "overflow": "hidden",
            },
            Object {
              "height": 40,
              "width": 40,
            },
            Object {},
            Object {
              "backgroundColor": "#F5F5F5",
            },
          ]
        }
      >
        <Image
          source={
            Object {
              "uri": "https://farm3.staticflickr.com/2926/14690771011_945f91045a.jpg",
            }
          }
          style={
            Object {
              "height": 40,
              "width": 40,
            }
          }
        />
      </View>
    </View>
    <View
      style={
        Object {
          "flex": 1,
          "flexDirection": "column",
          "justifyContent": "space-between",
          "marginLeft": 12,
        }
      }
    >
      <Text
        accessibilityTraits="header"
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Object {
              "fontSize": 16,
              "fontWeight": "600",
            },
            Object {
              "fontFamily": ".SFUIDisplay-semibold",
            },
          ]
        }
      >
        Allura
      </Text>
      <Text
        accessible={true}
        allowFontScaling={true}
        disabled={false}
        ellipsizeMode="tail"
        style={
          Array [
            Object {
              "fontFamily": ".SFUIDisplay",
            },
            Object {
              "color": "#2D3B45",
              "fontSize": 16,
            },
            Array [
              Object {
                "fontSize": 14,
                "paddingTop": 2,
              },
              Object {
                "color": "#8B969E",
              },
            ],
            Object {
              "fontFamily": ".SFUIDisplay",
            },
          ]
        }
      >
        No submission
      </Text>
    </View>
    <View
      style={
        Object {
          "marginRight": 12,
        }
      }
    >
      <TouchableOpacity
        accessibilityComponentType="button"
        accessibilityTraits="button"
        activeOpacity={0.2}
        onLongPress={undefined}
        onPress={[Function]}
        onPressIn={undefined}
        onPressOut={undefined}
        style={undefined}
        testID="header.navigation-done"
      >
        <View
          style={
            Object {
              "paddingLeft": 20,
            }
          }
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            disabled={false}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "fontFamily": ".SFUIDisplay",
                },
                Object {
                  "color": "#2D3B45",
                  "fontSize": 16,
                },
                Object {
                  "color": "#008EE2",
                  "fontSize": 18,
                  "fontWeight": "600",
                },
                Object {
                  "fontFamily": ".SFUIDisplay-semibold",
                },
              ]
            }
          >
            Done
          </Text>
        </View>
      </TouchableOpacity>
    </View>
  </View>
</View>
`;
